# Soviet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  index.html  latest.json  package-lock.json  package.json  popout.html  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  ci.yml  ios.yml  nightly.yml  release.yml
docs/: ARCHITECTURE.md  CHANNELS_V2.md  CODE_SIGNING.md  CONTACTS.md  CONTRIBUTING.md  CRYPTO.md  DEVICE_SYNC.md  LAN_MODE.md  MESH_NETWORK.md  UI_DESIGN.md
keygen_helper/: Cargo.toml
keygen_helper/src/: main.rs
mobile/: index.html
protocol/: PROTOCOL.md
src/: App.tsx  PopoutRoot.tsx  latest.json  main.tsx  popout.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  nostr.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/identity/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/p2p/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: AddContactModal.tsx  BearLogo.tsx  ChannelWindow.tsx  ChatTabs.tsx  ChatWindow.tsx  ContactContextMenu.tsx  ContactProfile.tsx  CreateChannelModal.tsx  CreateGroupModal.tsx  FileTransferWindow.tsx  GlobalSearch.tsx  IncomingRequestModal.tsx  KeyboardShortcuts.tsx  ShareCard.tsx  Sidebar.tsx  Toast.tsx  UserSearchModal.tsx
src/pages/: ChatPopout.tsx  Main.tsx  Onboarding.tsx  Settings.tsx
src/store/: index.ts
src/styles/: global.css
src/utils/: sounds.ts
